<resources>
    <string name="app_name">Voice to Mail</string>
    <string name="action_settings">Settings</string>
    <string name="record_start">Start</string>
    <string name="record_resume">Resume</string>
    <string name="record_pause">Pause</string>
    <string name="record_stop">Stop</string>
    <string name="msg_recordingError">Recording error occurred</string>
    <string name="record_cancel">Cancel</string>
    <string name="settings_smtp">SMTP settings</string>
    <string name="key_smtp_checkCertificate">smtpCheckCertificate</string>
    <string name="pref_smtp_checkCertificate">Check certificate</string>
    <string name="pref_smtp_connectionType">Connection type</string>

    <string name="pref_smtp_ConnectionType_clear">Clear</string>
    <string name="pref_smtp_ConnectionType_tls">TLS</string>
    <string name="pref_smtp_ConnectionType_startTls">StartTLS</string>
    <string name="key_smtp">smtp</string>
    <string name="key_smtp_connectionType">smtp_connectionType</string>
    <string name="pref_smtp_hostName">Host name</string>
    <string name="key_smtp_hostName">hostName</string>
    <string name="pref_smtp_password">Password</string>
    <string name="key_smtp_password">smtp_password</string>
    <string name="key_smtp_port">smtp_port</string>
    <string name="pref_smtp_port">Port</string>
    <string name="key_smtp_username">smtp_username</string>
    <string name="pref_smtp_username">Username</string>
    <string name="pref_smtp_test">Test connection</string>
    <string name="key_smtp_test">smtp_test</string>
    <string name="msg_smtp_connection_good">Connection succeeded!</string>
    <string name="msg_smtp_unknown_error">Unknown error (code %d)</string>
    <string name="key_smtp_email">smtp_email</string>
    <string name="pref_smtp_email">Email address</string>
    <string name="key_targetEmail">targetEmail</string>
    <string name="pref_targetEmail">Target e-mail address</string>
    <string name="key_wifiOnly">wifiOnly</string>
    <string name="pref_sendOverWifiOnly">Send only using WiFi only</string>
    <string name="pref_deleteAfter">Delete recordings</string>
    <string name="key_deleteRecordingsAfter">deleteAfter</string>
    <string name="email_body">See attached file</string>
    <string name="email_subject">Your voice recording</string>
    <string name="pref_deleteAfter_never">Never</string>
    <string name="pref_deleteAfter_immediately">When sent</string>
    <string name="pref_deleteAfter_week">After one week</string>
    <string name="action_viewList">View recordings</string>
    <string name="msg_file_sent">File sent</string>
    <string name="msg_sending_file">Sending file…</string>
    <string name="msg_cancel_confirm">The recording will be deleted</string>
    <string name="msg_title_cancel_confirm">Cancel?</string>
    <string name="btn_delete_no">Oops, no</string>
    <string name="btn_delete_yes">Yes, delete</string>
    <string name="cd_send">Send</string>
    <string name="itemSent">Sent</string>
    <string name="itemNotSent">Not sent</string>
    <string name="pref_storeTo">Store recordings to</string>
    <string name="key_storeTo">storeTo</string>
    <string name="pref_storeTo_external">SD card</string>
    <string name="pref_storeTo_internal">Internal storage</string>
    <string name="prefCategory_email">Email</string>
    <string name="prefCategory_other">Other</string>
    <string name="key_emailSubject">emailSubject</string>
    <string name="pref_emailSubject">Email subject</string>
    <string name="key_emailBody">emailBody</string>
    <string name="pref_emailBody">Email body</string>
</resources>
