<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="@string/key_smtp"
        android:title="@string/settings_smtp">
        <ListPreference
            android:dialogTitle="@string/pref_smtp_connectionType"
            android:key="@string/key_smtp_connectionType"
            android:title="@string/pref_smtp_connectionType"/>
        <CheckBoxPreference
            android:defaultValue="@bool/pref_smtp_checkCertificate"
            android:key="@string/key_smtp_checkCertificate"
            android:title="@string/pref_smtp_checkCertificate"/>
        <EditTextPreference
            android:key="@string/key_smtp_hostName"
            android:title="@string/pref_smtp_hostName"/>
        <EditTextPreference
            android:defaultValue="@integer/pref_smtp_port"
            android:key="@string/key_smtp_port"
            android:title="@string/pref_smtp_port"/>
        <EditTextPreference
            android:key="@string/key_smtp_email"
            android:title="@string/pref_smtp_email"/>
        <EditTextPreference
            android:key="@string/key_smtp_username"
            android:title="@string/pref_smtp_username"/>
        <EditTextPreference
            android:key="@string/key_smtp_password"
            android:title="@string/pref_smtp_password"/>
        <Preference
            android:key="@string/key_smtp_test"
            android:title="@string/pref_smtp_test"/>
    </PreferenceScreen>

    <EditTextPreference
        android:key="@string/key_targetEmail"
        android:title="@string/pref_targetEmail"/>
    <CheckBoxPreference
        android:defaultValue="@bool/pref_wifiOnly"
        android:key="@string/key_wifiOnly"
        android:title="@string/pref_sendOverWifiOnly"/>
    <ListPreference
        android:dialogTitle="@string/pref_deleteAfter"
        android:key="@string/key_deleteRecordingsAfter"
        android:title="@string/pref_deleteAfter"/>
    <ListPreference
        android:dialogTitle="@string/pref_storeTo"
        android:key="@string/key_storeTo"
        android:title="@string/pref_storeTo"/>
</PreferenceScreen>